[package]
name = "lazy-panic"
version = "0.2.0"
authors = ["Douman <douman@gmx.se>"]
description = "Lazy utils to customize panic messages"
repository = "https://github.com/DoumanAsh/lazy-panic.rs"
documentation = "https://doumanash.github.io/lazy-panic.rs"
license = "MIT"

[dependencies]

[dependencies.backtrace]
version = "0.3"
optional = true

[features]
backtrace-on = ["backtrace"]
